# ATRAG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
atrag/: alembic.ini  app.py  config.py  exception_handlers.py  exceptions.py
atrag/agent/: __init__.py  agent_config.py  agent_event_listener.py  agent_event_processor.py  agent_history_manager.py  agent_memory_manager.py  agent_message_queue.py  agent_session_manager.py  agent_session_manager_lifecycle.py  error_message_formatter.py  exceptions.py  hybrid_router.py  i18n.py  mcp_app_factory.py  response_types.py  stream_formatters.py  tool_reference_extractor.py  tool_use_message_formatters.py
atrag/agent/tests/: __init__.py  test_hybrid_router.py
atrag/api/: openapi.yaml
atrag/api/paths/: agent.yaml  apikeys.yaml  audit.yaml  auth.yaml  bots.yaml  chat_documents.yaml  chats.yaml  collections.yaml  config.yaml  default_models.yaml  evaluations.yaml  export.yaml  flow.yaml  llm.yaml  llm_configuration.yaml  marketplace.yaml  message.yaml  misc.yaml  models.yaml  prompts.yaml  quotas.yaml  settings.yaml  web.yaml
atrag/auth/: __init__.py  authentication.py
atrag/chat/history/: __init__.py  message.py
atrag/concurrent_control/: __init__.py  manager.py  protocols.py  redis_lock.py  threading_lock.py  utils.py
atrag/context/: context.py
atrag/db/: models.py  neo4j_sync_manager.py  ops.py  redis_manager.py
atrag/db/repositories/: api_key.py  base.py  bot.py  chat.py  collection.py  document.py  document_index.py  (+13 more)
atrag/docparser/: audio_parser.py  base.py  chunking.py  doc_parser.py  docray_parser.py  image_parser.py  markitdown_parser.py  mineru_common.py  mineru_parser.py  parse_md.py  utils.py
atrag/evaluation/: .gitignore  __init__.py  config.example.yaml  local_ab_config.template.yaml  run.py
atrag/flow/: engine.py  parser.py
atrag/graph/: lightrag_manager.py
atrag/index/: base.py  document_parser.py  fulltext_index.py  graph_index.py  manager.py  summary_index.py  vector_index.py  vision_index.py
atrag/llm/: __init__.py  litellm_cache.py  litellm_logging.py  litellm_track.py  llm_error_types.py
atrag/mcp/: __init__.py  server.py
atrag/migration/: env.py  utils.py
atrag/misc/: stopwords.txt
atrag/objectstore/: base.py  local.py  s3.py
atrag/query/: query.py
atrag/schema/: utils.py  view_models.py
atrag/service/: agent_chat_service.py  api_key_service.py  audit_service.py  bot_service.py  chat_collection_service.py  chat_completion_service.py  chat_document_service.py  chat_service.py  chat_title_service.py  collection_service.py  collection_summary_service.py  default_model_service.py  document_service.py  evaluation_service.py  export_service.py  flow_service.py  graph_service.py  llm_available_model_service.py  llm_provider_service.py  marketplace_collection_service.py  marketplace_service.py  prompt_template_service.py  question_set_service.py  quota_service.py  setting_service.py
atrag/source/: Email.py  base.py  ftp.py  github.py  local.py  oss.py  s3.py  upload.py  url.py  utils.py
atrag/tasks/: collection.py  document.py  models.py  reconciler.py  scheduler.py  utils.py
atrag/tests/: test_p0_functional_fixes.py
atrag/trace/: __init__.py  instrumentation.py  mcp_integration.py  telemetry.py  utils.py
atrag/utils/: audit_decorator.py  constant.py  date.py  history.py  llm_response.py  pagination.py  request.py  tokenizer.py  uncompress.py  utils.py
atrag/vectorstore/: base.py  connector.py  qdrant_connector.py
atrag/version/: __init__.py
atrag/views/: api_key.py  audit.py  auth.py  bot.py  chat.py  collections.py  config.py  evaluation.py  export.py  flow.py  graph.py  internal_auth.py  llm.py  main.py  marketplace.py  marketplace_collections.py  openai.py  prompts.py  quota.py  settings.py  test.py  utils.py  web.py
atrag/websearch/: __init__.py
config/: __init__.py  celery.py  celery_tasks.py  export_tasks.py
deploy/atrag/: Chart.yaml  values.yaml
deploy/databases/: 00-config.sh  02-install-database.sh  install-kubeblocks.sh  uninstall-kubeblocks.sh
envs/: docker.env.overrides  env.template
models/: alibaba_bailian_models_completion.json  alibaba_bailian_models_embedding.json  alibaba_bailian_models_rerank.json  generate_model_configs.py  openrouter_models.json
scripts/: build-offline-package.sh  download_tiktokens.py  entrypoint.sh  init-es.sh  release-charts.sh  start-api.sh  start-celery-beat.sh  start-celery-flower.sh  start-celery-worker.sh  uvicorn-log-config.yaml
scripts/celery/: trigger_trask.sh
web/: .gitignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.mjs  global.ts  next.config.ts  openapitools.json  package.json  tsconfig.json
web/deploy/: env.local.template
web/scripts/: build.mjs  i18n-watch.mjs
web/src/: mdx-components.tsx  middleware.ts
(+577 files in other folders)
