[project]
requires-python = "<3.13,>=3.11.12"
dependencies = [
    "langchain<1.0.0,>=0.3.23",
    "llama-index<1.0.0,>=0.12.28",
    "uvicorn[standard]<1.0.0,>=0.23.1",
    "pydantic[email]>=2.10.3,<3.0.0",
    "cryptography<42.0.0,>=41.0.1",
    "python-dotenv<2.0.0,>=1.0.0",
    "auth0-python<5.0.0,>=4.2.0",
    "celery<6.0.0,>=5.3.1",
    "channels<5.0.0,>=4.0.0",
    "py7zr<1.0.0,>=0.20.8",
    "rarfile<5.0,>=4.1",
    "qdrant-client<2.0.0,>=1.3.0; python_version < \"3.12\" and python_full_version >= \"3.8.1\"",
    "redis<5.0.0,>=4.6.0",
    "arrow<2.0.0,>=1.2.3",
    "func-timeout<5.0.0,>=4.3.5",
    "terminal<1.0.0,>=0.4.0",
    "psycopg2-binary<3.0.0,>=2.9.6",
    "watchfiles<1.0.0,>=0.19.0",
    "flower<3.0.0,>=2.0.0",
    "django-celery-beat<3.0.0,>=2.5.0",
    "boto3>=1.26.165,<2.0.0",
    "aioboto3>=15.0.0",
    "oss2<3.0.0,>=2.18.0",
    "socksio<2.0.0,>=1.0.0",
    "whitenoise<7.0.0,>=6.5.0",
    "elasticsearch<9.0.0,>=8.9.0",
    "gevent<24.0.0,>=23.9.1",
    "requests<3.0.0,>=2.31.0",
    "qianfan<1.0.0.0,>=0.4.12.3",
    "pillow<11.0.0,>=10.0.0",
    "openai<2.0.0,>=1.71.0",
    "dashscope<2.0.0,>=1.23.1",
    "gitpython<4.0.0,>=3.1.43",
    "llama-index-embeddings-langchain<1.0.0,>=0.3.0",
    "llama-index-vector-stores-qdrant<1.0.0,>=0.6.0",
    "numpy>=2.1.3",
    "pipmaster<1.0.0,>=0.5.4",
    "pytablewriter<2.0.0,>=1.2.1",
    "litellm>=v1.80.0",
    "asyncpg>=0.30.0",
    "markitdown[all]>=0.1.1",
    "markdown-it-py[linkify]>=3.0.0",
    "nano-vectordb>=0.0.4.3",
    "jinja2>=3.0.0,<4.0.0",
    "jsonref>=1.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "fastapi-users[sqlalchemy,oauth]>=14.0.1",
    "neo4j>=5.28.1",
    "django-environ>=0.12.0",
    "alembic>=1.16.1",
    "sqlalchemy>=2.0.40",
    "pgvector>=0.3.6",
    "opik>=1.7.34",
    "nebula3-python==3.8.3",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "fastmcp>=2.10.0",
    "httpx>=0.27.0",
    "mcp-agent>=0.2.6",
    "duckduckgo-search>=8.1.1",
    "trafilatura>=2.0.0",
    "markdownify>=1.1.0",
    "aiohttp>=3.11.16",
    "ddgs>=9.0.0",
    "aiosqlite>=0.21.0",
    "pikepdf>=9.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "pypdfium2>=4.30.0,<5.0.0b1",
    "httpx-oauth>=0.16.1",
]
name = "atrag"
version = "0.1.0"
description = "A hybrid-routing RAG and agent platform with knowledge, file, and web retrieval"
readme = "README.md"

[tool.uv]
# index-url = "https://mirrors.aliyun.com/pypi/simple/"
prerelease = "allow"

[project.optional-dependencies]
all = [
]
lightrag-dev = [
    "nano-vectordb"
]
evaluation = [
    "ragas"
]
model = [
    "torch<3.0.0,>=2.6.0",
    "text2vec<2.0.0,>=1.3.3",
    "flagembedding<2.0.0,>=1.3.4",
    "sentence-transformers<5.0.0,>=4.0.2",
    "transformers==4.49.0",
]
dev = [
    "ruff<1.0.0,>=0.11.2",
    "types-toml<1.0.0.0,>=0.10.8.1",
    "types-redis<5.0.0.0,>=4.3.21.6",
    "types-requests>=2.31.0.2,<3.0.0.0",
    "types-chardet<6.0.0.0,>=5.0.4.6",
    "vulture<3.0,>=2.14",
    "deptry<1.0.0,>=0.23.0",
    "mypy<2.0.0,>=1.4.1",
    "datamodel-code-generator>=0.30.0",
]
[tool.ruff]
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

lint.ignore = [
    "E501", # line too long
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "models",
    "playground",
    "atrag/migration",
    "atrag/migrations",
    "atrag/schema/view_models.py",
    "vectorstore/test_connector.py",
    "readers/test_local_path_embedding.py",
]

# Same as Black.
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
# https://discuss.python.org/t/mypy-dir-is-excluded-but-then-errors-are-thrown-for-files-within-the-dir/75952
# https://mypy.readthedocs.io/en/stable/running_mypy.html#following-imports
follow_imports = "silent"
exclude = [
    "playground",
    "services/text2SQL",
    "models",
    "atrag/migrations",
    "vectorstore/test_connector.py",
    "readers/test_local_path_embedding.py",
    "atrag/schema/view_models.py",
]

[tool.setuptools.packages.find]
include = ["atrag*", "config*"]
exclude = ["atrag.*.tests*"]
namespaces = true

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.30.0",
]
